[package]
name = "kes-summed-ed25519"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Iñigo Querejeta Azurmendi <querejeta.azurmendi@iohk.io>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/kes"
categories = [ "cryptography" ]
description = "Key Evolving Signature for ouroboros praos"
keywords = [ "Crypto", "KES", "Ed25519", "MMM", "Sum" ]

[dependencies]
ed25519-dalek = "1"
rand_core = "0.5"
blake2 = "0.9"
zeroize = "1.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
harness = false
name = "mmm-sumed25519"
