[package]
name = "kes-summed-ed25519"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Iñigo Querejeta Azurmendi <querejeta.azurmendi@iohk.io>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/kes"
categories = [ "cryptography" ]
description = "Key Evolving Signature"
keywords = [ "Crypto", "KES", "Ed25519", "MMM", "Sum" ]

[dependencies]
ed25519-dalek = { version = "1" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "2.0", optional = true }
rand_core = "0.5"
blake2 = "0.9"
zeroize = "1.5.7"

[dev-dependencies]
criterion = "0.3.5"
serde_json = "1"
serde_cbor = "0.11.2"
hex = "0.4.3"

[features]
default = []
serde_enabled = ["ed25519-dalek/serde", "serde", "serde_with"]

[[bench]]
harness = false
name = "mmm-sumed25519"
