[package]
name = "kes-mmm-sumed25519-c"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
kes-mmm-sumed25519 = { path = "../kes-mmm-sumed25519" }
