cabal-version: 1.12
name:           kes-mmm-sumed
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/githubuser/kes-mmm-sumed#readme>
author:         IOHK
maintainer:     IOHK
copyright:      2020 IOHK
license:        BSD3
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules: KES
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
  default-language: Haskell2010
  extra-libraries: kes_mmm_sumed25519_c
  if os(windows)
    -- these are needed for rust libs, ideally
    -- ghc would provide these alongside with
    -- the other libs it provided by default as
    -- well.  Until this is fixed in ghc, we'll
    -- need to provide them explicitly here.
    extra-libraries: ws2_32 userenv

