[package]
name = "kes-mmm-sumed25519"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>"]
edition = "2018"
categories = [ "cryptography" ]
description = "Key Evolving Signature for ouroboros praos"
keywords = [ "Crypto", "KES", "Ed25519", "MMM", "Sum" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1"
rand = { version = "0.7" }
sha2 = "0.9"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[build-dependencies]
versionisator = "1.0.2"
